# changelist

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  main.rs
src/app/: actions.rs  commit.rs  mod.rs  shelve.rs
src/git/: command.rs  diff.rs  index_ops.rs  mod.rs  status.rs
src/model/: changelist.rs  mod.rs  shelf.rs  store.rs
src/ui/: diff_pane.rs  keymap.rs  mod.rs  popup.rs
