[package]
name = "changelist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitcl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["serde", "formatting", "macros"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.27.0"
